--- a/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animals-details/animals-details.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animals-details/animals-details.component.html
@@ -90,6 +90,7 @@
                 </div>
               </div>
             </div>
+            <a>animals-details</a>
           </div>
         </div>
       </div>
