--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
@@ -75,27 +75,17 @@
           </li>
           <li class="menu-item">
             <button class="slide-vertical" data-splitting>
-              Shop
+              Adoption
               <span class="lh-0"><i class="ph ph-plus"></i></span>
             </button>
             <ul class="sub-menu">
               <li class="menu-link">
-                <a href="shop.html" class="slide-horizontal" data-splitting>Shop</a>
+                <a [routerLink]="['/animals']" class="slide-horizontal" data-splitting>Adoption List</a>
               </li>
-              <li class="menu-link">
-                <a href="shop-details.html" class="slide-horizontal" data-splitting>
-                  Shop
-                  Details
-                </a>
-              </li>
-              <li class="menu-link">
-                <a href="cart.html" class="slide-horizontal" data-splitting>Cart</a>
-              </li>
-              <li class="menu-link">
-                <a href="checkout.html" class="slide-horizontal" data-splitting>Checkout</a>
-              </li>
+           
             </ul>
           </li>
+
           <li class="menu-link">
             <a href="contact-us.html" class="slide-vertical" data-splitting>Contact</a>
           </li>
