--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
@@ -73,18 +73,10 @@
               </li>
             </ul>
           </li>
-          <li class="menu-item">
-            <button class="slide-vertical" data-splitting>
-              Adoption
-              <span class="lh-0"><i class="ph ph-plus"></i></span>
-            </button>
-            <ul class="sub-menu">
-              <li class="menu-link">
-                <a [routerLink]="['/animals']" class="slide-horizontal" data-splitting>Adoption List</a>
-              </li>
-           
-            </ul>
+          <li class="menu-link">
+            <a routerLink="/animals" class="slide-horizontal">Adoption </a>
           </li>
+
 
           <li class="menu-link">
             <a href="contact-us.html" class="slide-vertical" data-splitting>Contact</a>
