login and register front end

--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
@@ -90,14 +90,10 @@
           <i class="ph ph-magnifying-glass"></i>
         </button>
 
-        <button class="cart-btn icon-48px position-relative border n20-border text-n20 hover-bg-primary hover-text-n0">
-          <span class="badge radius-pill text-n0 text-sm fw-medium bg-n20 position-absolute top-50 start-100 translate-middle z-1 mt-n3">0</span>
-          <span class="text-xl font-semibold">
-            <i class="ph-fill ph-shopping-cart"></i>
-          </span>
-        </button>
+        <a routerLink="/register" class="btn-secondary text-nowrap" style="color:black">Register</a>
 
-        <a href="#" class="btn-primary text-nowrap">Book Now</a>
+
+        <a routerLink="/login" class="btn-primary text-nowrap">Login</a>
 
         <button class="menu-toggle-btn text-2xl">
           <i class="ph ph-list"></i>
