comment on register regex

--- a/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/login/login.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="inner">
 
     <form #LoginForm="ngForm" (ngSubmit)="login(LoginForm.value)">
-      <h3>Welcome back!</h3>
+      <h3>Happy to see you back!</h3>
 
       <div class="form-wrapper">
         <label for="userEmail">Email</label>
