--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
@@ -104,3 +104,17 @@
 </header>
 <!-- header section end -->
 <!-- search form -->
+
+<div class="search-form-wrapper position-fixed top-0 start-0 w-100 vh-100 d-flex align-items-center justify-content-center bg-n10">
+  <button class="search-close-btn position-absolute top-0 end-0 text-2xl text-n0 mt-5 me-5">
+    <i class="ph ph-x"></i>
+  </button>
+  <div class="search-form">
+    <form class="d-flex align-items-center gap-4 border n10-border p-2">
+      <input type="text" placeholder="Search ..." class="w-100 p-2">
+      <button type="submit" class="text-2xl text-n0">
+        <i class="ph ph-magnifying-glass"></i>
+      </button>
+    </form>
+  </div>
+</div>
