--- a/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animal-form/animal-form.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animal-form/animal-form.component.html
@@ -9,28 +9,28 @@
         <!-- Start of Form -->
         <form #adoptionForm="ngForm" (ngSubmit)="submitAdoptionForm(adoptionForm)">
 
-          <!-- Full Name -->
+          <!-- User ID -->
           <div class="form-group mb-4">
-            <label for="fullName">Full Name</label>
-            <input type="text" class="form-control" id="fullName" [(ngModel)]="adoptionDetails.fullName" name="fullName" required>
+            <label for="userId">User ID</label>
+            <input type="number" class="form-control" id="userId" [(ngModel)]="adoptionDetails.userId" name="userId" required>
           </div>
 
-          <!-- Email -->
+          <!-- Animal ID -->
           <div class="form-group mb-4">
-            <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" [(ngModel)]="adoptionDetails.email" name="email" required>
+            <label for="animalId">Animal ID</label>
+            <input type="number" class="form-control" id="animalId" [(ngModel)]="adoptionDetails.animalId" name="animalId" required>
           </div>
 
           <!-- Medical Status -->
           <div class="form-group mb-4">
-            <label for="medicalStatus">Medical Status</label>
-            <input type="text" class="form-control" id="medicalStatus" [(ngModel)]="adoptionDetails.medicalStatus" name="medicalStatus" required>
+            <label for="medicalStatus">User Medical Status</label>
+            <input type="text" class="form-control" id="medicalStatus" [(ngModel)]="adoptionDetails.medicalStatus" name="userMedicalStatus" required>
           </div>
 
           <!-- Housing Type -->
           <div class="form-group mb-4">
-            <label for="housingType">Housing Type</label>
-            <select class="form-control" id="housingType" [(ngModel)]="adoptionDetails.housingType" name="housingType">
+            <label for="housingType">User Living Status</label>
+            <select class="form-control" id="housingType" [(ngModel)]="adoptionDetails.housingType" name="userLivingStatus">
               <option value="Apartment">Apartment</option>
               <option value="House">House</option>
               <option value="Other">Other</option>
@@ -39,19 +39,25 @@
 
           <!-- Financial Status -->
           <div class="form-group mb-4">
-            <label for="financialStatus">Financial Status</label>
-            <input type="text" class="form-control" id="financialStatus" [(ngModel)]="adoptionDetails.financialStatus" name="financialStatus" required>
+            <label for="financialStatus">User Financial Status</label>
+            <input type="text" class="form-control" id="financialStatus" [(ngModel)]="adoptionDetails.financialStatus" name="userFinancialStatus" required>
+          </div>
+
+          <!-- Flat Type -->
+          <div class="form-group mb-4">
+            <label for="flatType">User Flat Type</label>
+            <input type="text" class="form-control" id="flatType" [(ngModel)]="adoptionDetails.flatType" name="userFlatType" required>
           </div>
 
           <!-- Additional Details -->
           <div class="form-group mb-4">
-            <label for="additionalDetails">Additional Details</label>
-            <textarea class="form-control" id="additionalDetails" [(ngModel)]="adoptionDetails.additionalDetails" name="additionalDetails"></textarea>
+            <label for="additionalDetails">User More Details</label>
+            <textarea class="form-control" id="additionalDetails" [(ngModel)]="adoptionDetails.additionalDetails" name="userMoreDetails"></textarea>
           </div>
 
           <!-- Submit Button -->
           <div class="text-center">
-            <button type="submit" class="btn-primary" [disabled]="adoptionForm.invalid">Submit Adoption Request</button>
+            <button type="submit" class="btn-primary">Submit Adoption Request</button>
           </div>
 
         </form> <!-- End of Form -->
