--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
@@ -31,6 +31,9 @@
           <li class="menu-link">
             <a href="about-us.html" class="slide-vertical" data-splitting>About</a>
           </li>
+          <li class="menu-link">
+            <a routerLink="/addpost" class="slide-vertical" data-splitting>addpost</a>
+          </li>
           <li class="menu-item">
             <button class="slide-vertical" data-splitting>
               Pages
