--- a/project9_cohort4-master/project9_cohort4.client/src/app/mustafa/addpost/addpost.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/mustafa/addpost/addpost.component.html
@@ -1,4 +1,4 @@
-<form class="d-grid gap-lg-5 gap-3" (ngSubmit)="Addpost(formData.value)" #formData="ngForm">
+<form class="d-grid gap-lg-5 gap-3" (ngSubmit)="Addpost(formData)" #formData="ngForm">
   <div class="d-lg-flex d-grid align-items-center justify-content-lg-between gap-lg-6 gap-4">
     <div class="d-grid gap-lg-3 gap-2 w-100">
       <label for="name">StoryContent <span class="text-primary">*</span></label>
@@ -13,11 +13,10 @@
   </div>
   <div class="d-lg-flex d-grid align-items-center justify-content-lg-between gap-lg-6 gap-4">
     <div class="d-grid gap-lg-3 gap-2 w-100">
-      <label for="phone">image <span class="text-primary">*</span></label>
+      <label for="phone">Image <span class="text-primary">*</span></label>
       <input type="file" id="phone" name="StoryPhoto" placeholder="image"
-             class="px-xl-8 px-lg-6 px-md-4 px-3 py-lg-4 py-md-3 py-2 border n20-1-border radius-pill focus-primary w-100" ngModel required>
+             class="px-xl-8 px-lg-6 px-md-4 px-3 py-lg-4 py-md-3 py-2 border n20-1-border radius-pill focus-primary w-100" (change)="changeImage($event)" required>
     </div>
-
   </div>
   <div class="mt-4">
     <button type="submit" class="btn btn-primary">Send Message</button>
