creat all post and post details with comments component

--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
@@ -34,6 +34,9 @@
           <li class="menu-link">
             <a routerLink="/addpost" class="slide-vertical" data-splitting>addpost</a>
           </li>
+          <li class="menu-link">
+            <a routerLink="/allposts" class="slide-vertical" data-splitting>Our Community</a>
+          </li>
           <li class="menu-item">
             <button class="slide-vertical" data-splitting>
               Pages
