--- a/project9_cohort4-master/project9_cohort4.client/src/app/mustafa/all-posts/all-posts.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/mustafa/all-posts/all-posts.component.html
@@ -5,7 +5,7 @@
       <div class="col-lg-6">
         <span class="d-block text-primary text-uppercase mb-lg-4 mb-3">Posts</span>
         <h1 class="text-animation-word font-otomanopee text-n20 fw-normal">
-          All success store form our cleints
+          All success store from our cleints
         </h1>
         <h4>If you have a success story please share it with us</h4>
         <a class="btn w-25 mt-4" style="background-color: #FB7B53;color:white;">Add Post</a>
