--- a/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
@@ -9,8 +9,8 @@
 
 
           <li>
-            <a routerLink="/dash/GetAllUsers" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-              <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">All User</span>
+            <a routerLink="/dashboard/AdminAdoption" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Animal Adoption</span>
             </a>
           </li>
 
