--- a/project9_cohort4-master/project9_cohort4.client/src/app/mustafa/all-posts/all-posts.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/mustafa/all-posts/all-posts.component.html
@@ -267,3 +267,51 @@
   </div>
 </section>
 <!-- blogs section end -->
+
+
+
+
+
+
+
+
+
+
+
+<!--<div class="modal fade" id="addPostModal" tabindex="-1" aria-labelledby="addPostModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addPostModalLabel">Add New Post</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">-->
+        <!-- Form inside the modal -->
+        <!--<form #formData="ngForm" class="d-grid gap-lg-5 gap-3" (ngSubmit)="Addpost(formData.value)">
+          <div class="d-lg-flex d-grid align-items-center justify-content-lg-between gap-lg-6 gap-4">
+            <div class="d-grid gap-lg-3 gap-2 w-100">
+              <label for="name">StoryContent <span class="text-primary">*</span></label>
+              <input type="text" id="name" name="storyContent" placeholder="write post"
+                     class="px-xl-8 px-lg-6 px-md-4 px-3 py-lg-4 py-md-3 py-2 border n20-1-border radius-pill focus-primary w-100" ngModel required>
+            </div>
+            <div class="d-grid gap-lg-3 gap-2 w-100">
+              <label for="email">StoryTitle <span class="text-primary">*</span></label>
+              <input type="text" id="email" name="storyTitle" placeholder="StoryTitle"
+                     class="px-xl-8 px-lg-6 px-md-4 px-3 py-lg-4 py-md-3 py-2 border n20-1-border radius-pill focus-primary w-100" ngModel required>
+            </div>
+          </div>
+          <div class="d-lg-flex d-grid align-items-center justify-content-lg-between gap-lg-6 gap-4">
+            <div class="d-grid gap-lg-3 gap-2 w-100">
+              <label for="phone">Image <span class="text-primary">*</span></label>
+              <input type="file" id="phone" name="storyPhoto" placeholder="image"
+                     class="px-xl-8 px-lg-6 px-md-4 px-3 py-lg-4 py-md-3 py-2 border n20-1-border radius-pill focus-primary w-100" (change)="changeImage($event)" required>
+            </div>
+          </div>
+          <div class="mt-4">
+            <button type="submit" class="btn btn-primary">Send Message</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>-->
