profile login logout

--- a/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/login/login.component.css
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/login/login.component.css
@@ -240,3 +240,22 @@ button {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+
+span {
+  color: #ae3c33
+}
+
+
+span:hover {
+  color: #FB7B53;
+  text-decoration-style: dotted 
+}
+
+
+
+
+
+
+
+
