--- a/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/register/register.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/register/register.component.html
@@ -24,7 +24,10 @@
 						<input type="password" id="userConPassword" name="ConfirmPassword" class="form-control" ngModel>
 					</div>
 
-					<button type="submit" >Register Now</button>
+					<button type="submit">Register Now</button>
+
+					<br />
+					<p>Already A Member Of Our Family? <span routerLink="/login"><a>Login Now</a></span></p>
 				</form>
 
 			</div>
