--- a/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/user-reset-password/user-reset-password.component.css
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/user-reset-password/user-reset-password.component.css
@@ -28,24 +28,17 @@ body {
   padding: 7em 5em;
 }
 
-.col-lg-4, .col-lg-8 {
+.col-lg-12 {
   margin-top: 2em;
 }
 
 
 
 #editPWDbtn {
-    background-color: antiquewhite !important;
-    color : black;
+  background-color: antiquewhite !important;
+  color: black;
 }
 
 .list-group-item {
-    text-align : center;
+  text-align: center;
 }
-
-
-
-
-
-
-
