--- a/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/login/login.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/login/login.component.html
@@ -15,6 +15,9 @@
       </div>
 
       <button type="submit">Login</button>
+
+      <br />
+      <p>Don't Have An Account Yet? <span routerLink="/register"><a>Register Now</a></span></p>
     </form>
 
   </div>
